[gd_scene load_steps=5 format=3 uid="uid://ctvstv7nacsms"]

[ext_resource type="Script" path="res://src/interfaces/stage_info.gd" id="1_4dqql"]
[ext_resource type="Theme" uid="uid://b1b8etb0755dh" path="res://res/themes/menu.theme" id="1_dmdfx"]
[ext_resource type="FontFile" uid="uid://bl3r8uw0preii" path="res://assets/fonts/ThaleahFat.ttf" id="2_srqf3"]
[ext_resource type="FontFile" uid="uid://dyfteyjgkiyc8" path="res://assets/fonts/monogram.ttf" id="3_gdios"]

[node name="StageInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4dqql")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
theme = ExtResource("1_dmdfx")
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="StageName" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_srqf3")
text = "Stage Name"
horizontal_alignment = 1

[node name="Time" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_gdios")
text = "00:00:00"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Card1" type="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Card2" type="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Card3" type="TextureRect" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ButtonPlay" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
